@@ -1,3 +1,5 @@
+- Refactor: Remove references of AdministrativeOffice in AcademicTariff and FinantialEntity
+
 8.4.7 (14-10-2022)
 - Refactor: Remove references of AdministrativeOffice in AcademicTariff
 
